src/sass/post-types/work.scss
/* work: scss for individual work pages / case-studies
----------------------------------------------------------------------------- */
.case-study {
    padding-top: var(--site-space-lg);
    margin-bottom: var(--site-space-lg);
    background-color: var(--white);

    .page-top {
        margin-bottom: var(--drop-medium);
        display: grid;
        grid-template-columns: 1fr;

        .meta {
            font-size: var(--font-base);
            text-transform: uppercase;
            color: var(--mid-black);
        }

        .title {
            font-size: var(--font-medium);
        }

        .excerpt {
            font-size: var(--font-base);
            color: var(--mid-black);
        }
    }

    @media (min-width: 960px) {
        .page-top {
            grid-template-columns: repeat(12, 1fr);
            grid-column-gap: 48px;
        }

        .meta {
            grid-column: 1 / 3;
        }

        .title {
            grid-column: 1 / -1;
            grid-row: 2;
        }

        .excerpt {
            grid-column: 8 / -1;
            grid-row: 2;
            line-height: var(--lh-base);
        }
    }

    // primary content ----------------------------------------------------------
    .primary-content {
        margin-bottom: var(--drop-big);
    }

    .primary-image,
    .primary-video {
        width: 100%;
        margin-bottom: var(--drop-medium);
    }

    .primary-content__info {
        display: grid;
        grid-template-columns: 1fr;

        @media (min-width: 960px) {
            grid-template-columns: repeat(12, 1fr);
            grid-column-gap: 48px;

            .lh-col {
                grid-column: 1 / 7;
            }

            .details {
                grid-column: 1 / 7;
            }

            .rh-col {
                grid-column: 8 / -1;
            }
        }
    }

    .lh-col {
        .statement {
            margin-bottom: var(--drop-large);
            font-family: var(--titling);
            font-size: var(--font-medium);
        }

        .details {
            .sector {
                grid-column: 1 / 3;
            }

            .what-we-did {
                @media (min-width: 960px) {
                    display: grid;
                    grid-template-columns: repeat(6, 1fr);
                    grid-template-rows: auto;
                    grid-column-gap: var(--gutter-larger);
                    .service-type {
                        grid-column: span 2;
                    }
                }
            }
        }

        h3 {
            margin-bottom: 0.25rem;
            font-size: var(--font-base);
            text-transform: uppercase;
            color: var(--mid-black);
        }

        .type {
            font-family: 'cabinet-medium';
            font-size: var(--font-base);
            line-height: var(--lh-medium);
        }

        .sector,
        .awards,
        .strategy,
        .design,
        .digital {
            margin-bottom: 3.5rem;
            display: flex;
            flex-direction: column;
        }
    }

    .rh-col {
        .secondary-image {
            width: 100%;
        }
    }

    // flexible content styles -----------------------------------------------------------------------------
    // shared styles -----------------------------------------------------------------------------
    .flexible-content__case-study {
        padding-top: 6rem;
        background-color: var(--off-white);
    }

    .image-text,
    .media__half-width,
    .media__full-width {
        margin-bottom: var(--drop-medium);
    }

    // the classes below replace the .contain utility class
    .image-text,
    .media__half-width,
    .media__full-width,
    // .full-width-media,
    .primary-media {
        width: 100%;
        max-width: var(--site-width);
        padding-left: var(--site-pad-small);
        padding-right: var(--site-pad-small);
        margin-left: auto;
        margin-right: auto;

        @media (min-width: 880px) {
            padding-left: var(--site-pad-large);
            padding-right: var(--site-pad-large);
        }
    }

    .container {
        width: 100%;
        max-width: 1440px;
        padding: 1.5rem 4.5rem 0 4.5rem;
        margin: 0 auto;
        display: grid;
        grid-template-columns: 1fr;

        @media (min-width: 800px) {
            grid-template-columns: repeat(12, 1fr);
            grid-column-gap: 48px;
        }
    }

    // specific flexible content styles ---------------------------------------------------------
    // text ---------------------------------------------------------------------
    .rich-text {
        display: flex;
        justify-content: center;

        .container__centered {
            max-width: 1296px;
            padding-top: 1.5rem;
            border-top: 1.5px solid var(--mid-black);
            margin-left: var(--site-pad-large);
            margin-right: var(--site-pad-large);
            display: grid;
            grid-template-columns: 1fr;

            @media (min-width: 800px) {
                grid-template-columns: repeat(12, 1fr);
                grid-column-gap: var(--gutter-large);
            }
        }

        .title {
            grid-column: 1 / 7;
            grid-row: 1;
        }

        .text {
            grid-column: 9 / -1;

            p {
                margin-bottom: var(--drop-medium);
            }
        }

        .stats {
            display: grid;
            grid-template-columns: repeat(12, 1fr);
            gutter: var(--gutter-large);
        }
    }

    // testimonial ---------------------------------------------------------------------
    .testimonial {
        padding: 4.75rem 0; // 76px 0
        margin-top: var(--site-space-lg);
        margin-bottom: var(--site-space-lg);
        background-color: var(--white);

        .author-meta {
            padding-top: var(--site-space-sm);
            border-top: 1.5px solid var(--mid-black);
            margin-bottom: var(--drop-small);

            @media (min-width: 800px) {
                grid-column: 2 / 4;
            }

            .author,
            .role,
            .organisation {
                display: block;
            }

            .author {
                font-family: 'cabinet-medium';
            }

            .role,
            .organisation {
                color: var(--mid-black);
            }
        }

        .text {
            font-family: var(--titling);
            font-size: var(--font-medium);

            @media (min-width: 800px) {
                grid-column: 5 / 12;
            }
        }

        blockquote {
            position: relative;
        }

        blockquote:before,
        blockquote:after {
            position: absolute;
        }

        blockquote:before {
            content: open-quote;
            top: -0.25rem;
            left: -1rem;
        }

        blockquote:after {
            content: close-quote;
        }
    }

    // image-text ---------------------------------------------------------------------
    .image-text {
        .image {
            grid-column: 1 / 7;
        }

        .text {
            grid-column: 9 / -1;
        }

        p {
            margin-bottom: var(--drop-medium);
        }

        p:first-of-type {
            font-family: var(--titling);
            font-size: var(--font-medium);
        }
    }

    // image / video media blocks -----------------------------------------------------------------------------
    .two-cols-media,
    .full-width-video,
    .full-screen-video,
    .full-screen-media {
        width: 100%;
        max-width: 1440px;
        padding: 0 4.5rem;
        margin: 0 auto var(--drop-medium);
    }

    .two-cols-media {
        @media (min-width: 800px) {
            display: grid;
            grid-template-columns: repeat(12, 1fr);
            grid-column-gap: 48px;
        }

        .lh-video,
        .rh-video,
        .lh-image,
        .rh-image {
            width: 100%;
        }

        .lh-video {
            margin-bottom: var(--drop-small);
        }

        @media (min-width: 800px) {
            .lh-video,
            .lh-image {
                grid-column: 1 / 7;
            }

            .rh-video,
            .rh-image {
                grid-column: 7 / -1;
            }
        }
    }

    .full-width-media,
    .full-screen-media {
        video {
            width: 100%;
        }
    }

    .full-screen-media {
        width: 100%;
        max-width: 1920px;
        margin: 0 auto;

        video,
        figure {
            margin-bottom: var(--drop-medium);
        }
    }

    // fixes
    .full-screen-media {
        img {
            width: 100%;
        }
    }

    .full-width-image {
        margin-bottom: var(--drop-medium);
    }
}

